# Peridot

./: .gitignore  CODE_OF_CONDUCT.md  COMMUNITY_INSTALL.md  CONTRIBUTING.md  LICENSE  PHILOSOPHY.md  README.md  SECURITY.md  config.py  core.py  diagnostic.py  launcher.py  main.py  pyproject.toml  requirements.txt  server.py  setup.py  ui.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_report.md  bug_report.md  feature_request.md
.github/workflows/: lint.yml  submit-pypi.yml  tests.yml
benchmarking/: handoff_bench.py  hardware_info.py  inference_bench.py  run_bench.py
benchmarking/results/: bench_1772095324.json  bench_1772095499.json  bench_1772102388.json
config/: approved_domains.json  constitution.json  integrity_hashes.json  whitelist.json
core_system/: __init__.py  audit.py  cache.py  command_router.py  ears.py  enhancedlogger.py  ethics.py  integrity_checker.py  permissions.py  research.py  resource_monitor.py  safeaccess.py  secure_network.py
diagnostics/: __init__.py  benchmark.py  diagnostics.py  selftest.py
docs/: MEDICAL_RESEARCH_INTEGRATION.md
input/: balls.txt  diagnostic.task  example.task  invalid.task  json_summary.task  log_summary.task  run_self_tests.task  test_summary.task  what_is_icould.task
modules/: resource_monitor.py
scripts/: file_processor.py  generate_tasks.py  nlp_translator.py  run_tests.py  test_runner.py
utils/: path_checker.py  safe_shutdown.py
